--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language:
   - python
 
 install:
-  - pip install -r requrements.txt
+  - pip install -r requirements.txt
 
 script:
   - python -m unittest discover
